--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,49 +1,56 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container">
-    <%= link_to "ForuMia", root_path, class: "navbar-brand" %>
-    <ul class="nav navbar-nav mr-auto">
-      <li class="nav-item zoom nav-zoom active">
-        <%= link_to home_index_path, class: "nav-link" do %>
-          <%= fa_icon "home" %> <span>Accueil</span>
-        <% end %>
-        </a>
-      </li>
-      <li class="nav-item zoom nav-zoom active">
-        <%= link_to staff_index_path, class: "nav-link" do %>
-          <%= fa_icon "users" %> <span>Staff</span>
-        <% end %>
-        </a>
-      </li>
-    </ul>
-    <ul class="nav navbar-nav ml-auto">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <%= display_avatar(current_user) %>
-          <span class="account-nav <%= "username-nav" if current_user %>">
-            <span><%= current_user ? current_user.username : "Mon compte" %></span>
-          </span>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <% if !current_user %>
-            <%= link_to new_user_session_path, class: "dropdown-item" do %>
-              <%= fa_icon "sign-in-alt" %> Connexion
-            <% end %>
-            <%= link_to new_user_registration_path, class: "dropdown-item" do %>
-              <%= fa_icon "user-plus" %> Inscription
-            <% end %>
-          <% else %>
-          <%= link_to user_path(current_user.username), class: "dropdown-item" do %>
-            <%= fa_icon "address-card" %> Profil
+  <%= link_to "ForuMia", root_path, class: "navbar-brand" %>
+    
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <%= link_to home_index_path, class: "nav-link" do %>
+            <%= fa_icon "home" %>
           <% end %>
-          <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
-            <%= fa_icon "cog" %> Paramètre
+        </li>
+        <li class="nav-item">
+          <%= link_to staff_index_path, class: "nav-link" do %>
+            <%= fa_icon "users" %>
           <% end %>
-            <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
-              <%= fa_icon "sign-out-alt" %> Déconnexion
+        </li>
+        <li class="nav-item">
+          <div class="nav-link pointer" onclick="darkLight()" id="checkBox">
+            <%= fa_icon "lightbulb" %>
+          </div>
+        </li>
+        <li class="nav-item">
+            <input type="checkbox" class="custom-control-input" onclick="darkLight()" id="checkBox" checked="">
+        </li>
+      </ul>
+      <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%= display_avatar(current_user) %>
+            <span class="account-nav <%= "username-nav" if current_user %>">
+              <span><%= current_user ? current_user.username : "Mon compte" %></span>
+            </span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <% if !current_user %>
+              <%= link_to new_user_session_path, class: "dropdown-item" do %>
+                <%= fa_icon "sign-in-alt", class: "mr-1" %> Connexion
+              <% end %>
+              <%= link_to new_user_registration_path, class: "dropdown-item" do %>
+                <%= fa_icon "user-plus", class: "mr-1" %> Inscription
+              <% end %>
+            <% else %>
+            <%= link_to user_path(current_user.username), class: "dropdown-item" do %>
+              <%= fa_icon "address-card", class: "mr-1" %> Profil
             <% end %>
-          <% end %>
-        </div>
-      </li>
-    </ul>
+            <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
+              <%= fa_icon "cog", class: "mr-1" %> Paramètre
+            <% end %>
+              <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
+                <%= fa_icon "sign-out-alt", class: "mr-1" %> Déconnexion
+              <% end %>
+            <% end %>
+          </div>
+        </li>
+      </ul>
   </div>
 </nav>
