--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'application', "data-turbolinks-track" => true %>
   </head>
 
-  <body data-turbolinks="false">
+  <body>
     <%= render "layouts/navbar" %>
 
     <div class="container">
