--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -283,8 +283,8 @@ h3, .h3 {
 	cursor: pointer;
 }
 @media (max-width: 992px) {
-	.navbar-nav li a {
-		margin-right: 10px;
+	ul.navbar-nav.mr-auto li a {
+		margin-right: 16px;
 	}
 
 	.dropdown-menu.show {
