--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<header class="py-4 bg-image-full rounded-top rounded-bottom-0" style="background-image: url(<%= display_background(@user) %>);">
-  <img class="img-fluid d-block ml-4 rounded" width="130" height="130" src="<%= display_avatar(@user, "profile") %>" alt="">
+<header class="py-4 bg-image-full rounded-top rounded-bottom-0" style="background-image: url(<%= display_background(@user) %>); height: 178px;">
+  <img class="img-fluid d-block ml-4 rounded" style="height: 130px; width: 130px;" src="<%= display_avatar(@user, "profile") %>" alt="">
 </header>
 
 <div class="card rounded-top-0 mb-4">
