--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<header class="py-4 bg-image-full rounded-top rounded-bottom-0" style="background-image: url(<%= display_background(@user) %>); height: 178px;">
+<header class="bg-image-full rounded-top rounded-bottom-0" style="padding-top: 20px;background-image: url(<%= display_background(@user) %>); height: 170px;">
   <img class="img-fluid d-block ml-4 rounded" style="height: 130px; width: 130px;" src="<%= display_avatar(@user, "profile") %>" alt="">
 </header>
 
