Redimensionnement des photos de couverture sur les profils

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<header class="bg-image-full rounded-top rounded-bottom-0" style="padding-top: 19px;background-image: url(<%= display_background(@user) %>); height: 170px; background-size: 700px 170px;">
+<header class="bg-image-full rounded-top rounded-bottom-0" style="padding-top: 19px;background-image: url(<%= display_background(@user) %>); width: 700; height: 170px; background-size: cover;">
   <img class="img-fluid d-block ml-4 rounded" style="height: 130px; width: 130px;" src="<%= display_avatar(@user, "profile") %>" alt="">
 </header>
 
