--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="card rounded-top-0 mb-4">
   <span class="font-weight-bold ml-4 mt-2 mb-2">
-    Nox
+    <%= @user.username %>
   </span>
 </div>
 
