--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,9 +14,9 @@
           <% end %>
         </li>
         <li class="nav-item">
-          <div class="nav-link pointer" onclick="darkLight()" id="checkBox">
+          <a href="<%= request.original_url %>" class="nav-link pointer" onclick="darkLight()" id="checkBox" data-turbolinks="false">
             <%= fa_icon "lightbulb" %>
-          </div>
+          </a>
         </li>
         <li class="nav-item">
             <input type="checkbox" class="custom-control-input" onclick="darkLight()" id="checkBox" checked="">
