--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
     <title>Forumia</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <% if @turbolinks_cache_control %>
+      <meta name="turbolinks-cache-control" content="<%= @turbolinks_cache_control %>">
+    <% end %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag    'application', media: 'all', "data-turbolinks-track" => true %>
     <%= javascript_include_tag 'application', "data-turbolinks-track" => true %>
