Amélioration des profils

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -72,7 +72,7 @@
 <% if @user.music.present? %>
   <div class="card mb-4">
     <div class="card-body">
-      <label><%= fa_icon "music", class: "mr-1" %> <strong>Musique :</strong></label><br />
+      <label><%= fa_icon "music", class: "mr-1" %> <strong>Musique</strong></label><br />
       <%= display_music(@user) %>
     </div>
   </div>
