Première version des roles / permissions

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
           <% end %>
         </li>
         <li class="nav-item">
-          <a href="<%= request.original_url %>" class="nav-link pointer" onclick="darkLight()" id="checkBox" data-turbolinks="false">
+          <a class="nav-link pointer" onclick="darkLight()" id="checkBox" data-turbolinks="false">
             <%= fa_icon "lightbulb" %>
           </a>
         </li>
