--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,7 +14,9 @@
       <h4 class="card-title"><%= fa_icon "user-plus", class:" mr-1" %> Inscription</h4>
       <div class="card-text mt-3">
       <%= f.input :username, prepend: fa_icon("user"), placeholder: "Nom d'utilisateur" %>
-      <%= f.input :email, prepend: fa_icon("at"), placeholder: "Adresse email" %>
+      <div id="color-picker-1">
+        <%= f.input :email, prepend: fa_icon("at"), placeholder: "Adresse email" %>
+      </div>
       <%= f.input :password, prepend: fa_icon("key"), placeholder: "Mot de passe" %>
       <%= f.input :password_confirmation, prepend: fa_icon("check"), placeholder: "Confirmation du mot de passe" %>
       <%= f.button :submit, value: "S'inscrire", class: "btn-primary btn-size" %>
