Possibiliter de modifier un rôle

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -300,4 +300,8 @@ h3, .h3 {
 		display: inline !important;
 		padding: 0.25rem 0.5rem !important;
 	}
+
+	span.account-nav.username-nav {
+		display: none!important;
+	}
 }
