--- a/app/views/staff/index.html.erb
+++ b/app/views/staff/index.html.erb
@@ -10,7 +10,7 @@
             <% end %>
           <% end %>
           <%= link_to user_path(user.username) do %>
-            <img src="<%= display_avatar(user, 'profile') %>" class="rounded float-left mr-4" height="60" width="60">
+            <img src="<%= user.avatar_url %>" class="rounded float-left mr-4" height="60" width="60">
           <% end %>
           <div>
             <h5 class="card-title mb-2"><%= link_to user.username, user_path(user.username) %></h5>
